# mai-portal

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.husky/: pre-commit
backend/: config.py  dependencies.py  main.py
backend/adapters/: legacy.py
backend/admin/: routes.py
backend/agents/: checkpointer.py  graph.py  llm_factory.py  nodes.py  session_memory.py  skill_parser.py
backend/core/: frontmatter.py  iam.py  task_manager.py  vault.py  workspace.py
backend/graph/: builder.py  extractor.py  graphrag.py  layered_store.py  models.py  store.py
backend/indexer/: chunker.py  search.py  vectorstore.py
backend/ingestion/: markdown_post.py  pandoc_ast.py  pipeline.py  vlm_processor.py
backend/routers/: agent_api.py  graph_api.py  ingestion_api.py  legacy_adapter_api.py  openai_compat_api.py  search_api.py  skill_api.py  vault_api.py
backend/security/: audit_trail.py  data_classification.py  dlp.py  kill_switch.py  prompt_guard.py
data/: gpu_servers.json  hosts.json
docs/: FEATURE_GUIDE.md  capture-screenshots.js
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
infra/: Dockerfile.inference  deploy.sh  docker-compose.inference.yml
tests/: conftest.py  test_audit_trail.py  test_chunker.py  test_data_classification.py  test_dlp.py  test_frontmatter.py  test_iam.py  test_kill_switch.py  test_markdown_post.py  test_prompt_guard.py  test_session_memory.py  test_skill_parser.py  test_vault_api.py  test_workspace.py
vault/: iam.yaml
(+2018 files in other folders)
